# BitcoinMessageTools

./: README.md  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py
BitcoinMessageTools/: run.py
BitcoinMessageTools/website/: __init__.py  forms.py  views.py
BitcoinMessageTools/website/static/css/: style.css
BitcoinMessageTools/website/templates/: base.html  sign.html  verify.html
proxy/: Dockerfile  conf
proxy/conf.d/: flask_app.conf
src/BitcoinMessageTools/: run.py
web/: .coveragerc  .dockerignore  .env .dev  .env.prod  .gitignore  Dockerfile  Dockerfile   Dockerfile.dev  Dockerfile.prod  README.md  env_example  pyproject.toml  requirements.txt  run.py
web/docs/: conf.py  index.rst
web/tests/: test_BitcoinMessageTools.py
web/website/: __init__.py  views.py
web/website/static/css/: style.css
web/website/templates/: 404.html  base.html  sign.html
website/: __init__.py  forms.py  views.py
website/static/css/: style.css
website/templates/: base.html  verify.html
