[tool.poetry]
name = "bitcoinmessagetools"
version = "0.1.0"
description = "An online web application for signing and verification of bitcoin messages."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bitcoin-message-tool = "^0.1.3"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
